<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="enter_sum">Enter here</string>
    <string name="round">Round to nearest dollar</string>
    <string name="button">Calculate</string>
    <string name="empty"> </string>

</resources>