<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".TipCalculatorActivity" >

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
   		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/bill_amount" />
    
    	<EditText
    	    android:id="@+id/edtBillAmount"
        	android:layout_width="130dp"
        	android:layout_height="wrap_content"
        	android:inputType="numberDecimal"
        	android:hint="@string/enter_sum" />

    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:id="@+id/chkRound"
            android:checked="true"/>
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/round" />
        
    </LinearLayout>
    
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:id="@+id/btnCalculate"
            android:text="@string/button" 
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp">
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:id="@+id/txtTipResult"
            android:text="@string/empty" />
        
    </LinearLayout>
  
</LinearLayout>